# pinocchio_template

./: -  .gitignore  Cargo.toml  DEPLOYMENT.md  HELIUS_MIGRATION.md  README.md  SHANK_MIGRATION.md  TEMPLATE_SYSTEM.md  check-program-ids.sh  create-program.sh  deploy.sh  package-lock.json  package.json  quick-deploy.sh  tsconfig.json  update-program-ids.sh
basics/account-data/: Cargo.toml
basics/account-data/src/: entrypoint.rs  lib.rs
basics/account-data/tests/: account-data.test.ts  account_data.rs
basics/account_data/: account_data.json  codama-node-manual.ts  idl-to-codama.ts
basics/account_data/src/: lib.rs  lib.rs.backup  processor.rs
basics/account_data/tests/: account-data.test.ts
basics/counter/: Cargo.toml  debug_script.sh
basics/counter/src/: constants.rs  error.rs  lib.rs  processor.rs
basics/counter/tests/: TEST_TEMPLATE_README.md  account_data.rs  counter.rs  counter.test.ts  genericmollusk.rs
basics/counter2/: Cargo.toml  README.md
basics/counter2/src/: processor.rs
basics/counter2/tests/: TEST_TEMPLATE_README.md  account-data.test.ts  account_data.rs  counter2.rs  counter2.test.ts
basics/craps-pinocchio/: BET_ENCODING_IMPLEMENTATION.md  CODEBASE_REVIEW.md  Cargo.toml  INSTRUCTION_MIGRATION.md  MIGRATION_GUIDE.md  PAYOUT_IMPLEMENTATION.md  PRODUCTION_SUMMARY.md  README.md  updates.md
basics/craps-pinocchio/frontend/: Cargo.toml  README.md
basics/craps-pinocchio/frontend/src/: app.rs  config.rs  game.rs  hotkeys.rs  main.rs  rpc.rs  statistics.rs  ui.rs
basics/craps-pinocchio/mobile-frontend/: constants.md  implementation-guide.md  plan.md  program-integration-guide.md
basics/craps-pinocchio/src/: constants.rs  entrypoint.rs  entrypoint_consolidated.rs  error.rs  events.rs  lib.rs  lib.rs.backup
basics/craps-pinocchio/tests/: bet_batch_tests.rs  common.rs  common.rs.old  craps-pinocchio.test.ts  craps_pinocchio.rs.old  edge_case_tests.rs  game_state_tests.rs  instruction_handler_tests.rs  integration_tests.rs  integration_tests.rs.old  mod.rs  mod.rs.old  mollusk_integration.rs  place_bet_tests.rs  repeater_tests.rs  security_tests.rs  simple_tests.rs
basics/cross-program-invocation/: Cargo.toml  README.md  deploy.sh
basics/favorites/: Cargo.toml  README.md
basics/test-cleanup/: Cargo.toml  README.md  deploy.sh
basics/test-program/: Cargo.toml  README.md
basics/transfer-sol/: Cargo.toml  README.md
clients/: shared.ts
docs/: KITE_FUNCTIONS.md
idl/: account_data.json  counter.json  craps_pinocchio.json  create_token.json  cross_program_invocation.json  favorites.json  helius_test.json  my_counter.json  test_counter.json  test_token.json  transfer_sol.json
pinocchio-helper/: Cargo.toml
pinocchio-helper/src/: lib.rs
scripts/: bun-deploy.sh  bun-generate.sh  cleanup-duplicates.sh  cleanup-workspace-members.sh  create-program.sh  dep-wrapper.sh  deploy.sh  gen-wrapper.sh  generate-clients.js  quick-deploy.sh  rpc-config.js  smart-deploy.sh  smart-generate.sh  update-package-scripts.sh  update-program-ids.sh
templates/: TEST_TEMPLATE_README.md  generic_test_template.rs
templates/account-data/: Cargo.toml
templates/account-data/src/: entrypoint.rs  lib.rs
templates/account-data/src/instructions/: create.rs
templates/account-data/tests/: account_data.rs  generickite.ts  genericmollusk.rs
templates/counter/: Cargo.toml  README.md
templates/counter/src/: constants.rs  entrypoint.rs  lib.rs  processor.rs
templates/counter/src/instructions/: mod.rs
templates/counter/src/state/: counter.rs  mod.rs
tokens/create_token/: Cargo.toml  README.md
tokens/create_token/src/: constants.rs  entrypoint.rs  lib.rs
tokens/create_token/src/processor/: create_token.rs  mod.rs
tokens/create_token/tests/: create-token.test.ts  create_token.rs
(+173 files in other folders)
