[package]
name = "account-data-template"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace]

[lib]
crate-type = ["lib", "cdylib"]

[features]
no-entrypoint = []
idl = []

[dependencies]
pinocchio = "0.8.4"
pinocchio-log = "0.4.0"
pinocchio-pubkey = "0.2.4"
pinocchio-system = "0.2.3"
bytemuck = { version = "1.23.0", features = ["derive", "min_const_generics"] }
shank = "0.4.3"

[dev-dependencies]
mollusk-svm = "0.3.0"
solana-sdk = "2.3.0"
solana-program-runtime = "=2.3.1"
