[package]
name = "counter"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
pinocchio = { workspace = true }
pinocchio-pubkey = { workspace = true }
pinocchio-log = { workspace = true }
pinocchio-system = { workspace = true }
bytemuck = { workspace = true }
shank = { workspace = true }

[[bin]]
name = "counter"
path = "src/lib.rs"

[lib]
crate-type = ["cdylib", "lib"]
