[package]
name = "create-token"
version = "0.1.0"
edition = "2021"
license.workspace = true

[lib]
crate-type = ["lib", "cdylib"]

[features]
no-entrypoint = []
idl = []
cpi = ["no-entrypoint"]

[dependencies]
pinocchio = { workspace = true }
pinocchio-log = { workspace = true }
pinocchio-pubkey = { workspace = true }
pinocchio-system = { workspace = true }
pinocchio-helper = { path = "../../pinocchio-helper" }
pinocchio-token = { workspace = true }
bytemuck = { workspace = true }
shank = { workspace = true }

[dev-dependencies]
mollusk-svm = { workspace = true }
solana-sdk = { workspace = true }
solana-program-runtime = { workspace = true }
